# GD32F303CG_CMake

./: .gitignore  CMakeLists.txt  GD32F303CC_DEFAULT.ld  GD32F303CG_DEFAULT.ld  README.md  gd32f303.cfg
Include/: main.h  usbd_conf.h  usbd_hw.h
Source/: main.c
